fix film section mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -198,7 +198,8 @@
   #projects,
   #writing,
   #reading,
-  #film {
+  #film,
+  #film .img-holder {
     grid-template-columns: 1fr;
   }
 
